--- a/es6-module/amd.html
+++ b/es6-module/amd.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>AMD Module</title>
+  <title>ES6 Module transformed to AMD</title>
   <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
   crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1 class="wrapper">0</h1>
-  <script data-main="index.js" src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
+  <h1 class="wrapper"></h1>
+  <script data-main="./dist/index.js" src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
 </body>
 </html>
