--- a/es6-module/index.html
+++ b/es6-module/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <h1 class="wrapper">0</h1>
-  <script src="./index.js" type="module"></script>
+  <script src="./src/index.js" type="module"></script>
 </body>
 </html>
