--- a/types/ES6/index.html
+++ b/types/ES6/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ES6 Module transformed to AMD</title>
+  <title>ES6 Module</title>
   <script
   src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
@@ -11,6 +11,6 @@
 </head>
 <body>
   <h1 class="wrapper">0</h1>
-  <script data-main="./dist/index.js" src="./node_modules/requirejs/require.js"></script>
+  <script src="./index.js" type="module"></script>
 </body>
 </html>
